# Flowdeck

./: .gitignore  OPEN_QUESTIONS.md  PLAN.md  PRD.md  README.md  flowstate-clone.html  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: Dockerfile  diagnose.py  fly.toml  pyproject.toml  robot_sim.py  server.py
backend/proto/: robot_pb2.py  robot_pb2.pyi
backend/tests/: test_robot_sim.py  test_server.py
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BehaviorTreePanel.tsx  ConnectionBanner.tsx  DiagnosisModal.tsx  FaultPanel.tsx  RightPanel.tsx  RobotArm.tsx  SceneTree.tsx  TelemetryPanel.tsx  TopBar.tsx  Viewer3D.tsx  WorkcellScene.tsx
frontend/src/hooks/: useRobotStream.ts
frontend/src/lib/: fk.ts  ws.ts
frontend/src/proto/: robot.d.ts  robot.js
frontend/src/shaders/: faultHighlight.ts
frontend/src/store/: robotStore.ts
frontend/src/tests/: robotStore.test.ts  ws.test.ts
frontend/src/wasm/: wasm_fk.d.ts  wasm_fk.js  wasm_fk_bg.js  wasm_fk_bg.wasm  wasm_fk_bg.wasm.d.ts
proto/: robot.proto
scripts/: build-wasm.sh  download-urdf.sh  gen-proto.sh
wasm-fk/: Cargo.toml
wasm-fk/src/: lib.rs
